Make book reponsive

--- a/gamified-mst/app/components/TaskPage/TaskPage.css
+++ b/gamified-mst/app/components/TaskPage/TaskPage.css
@@ -14,8 +14,8 @@
   width: 100%;
   --sprite-image: url('../../images/book.webp');
   --sprite-c: 5;
-  --sprite-h: 3000;
-  --sprite-w: 9600;
+  --sprite-h: clamp(1000, calc(400vw / 1px), 5000);
+  --sprite-w: calc(var(--sprite-h) * 3.2);
   --sprite-f: 7;
   --sprite-anim-f: 6;
   --sprite-fr: 12;
